<resources>
    <string name="app_name">LessonRetrofit2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="todo">TODO</string>
    <string name="lorem">Lorem</string>
    <string name="created">Created</string>
    <string name="air_date">Air Date</string>
    <string name="dimension">Dimension</string>
    <string name="character">Character</string>
    <string name="episode">Episode</string>
    <string name="location">Location</string>
</resources>