<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp10">

    <TextView
        android:id="@+id/txt_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp15"
        android:text="@string/name"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/sp20"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_item_episode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp15"
        android:text="@string/episode"
        android:textColor="@color/black"
        android:textSize="@dimen/sp15"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/txt_item_name" />

    <TextView
        android:id="@+id/txt_item_created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp15"
        android:text="@string/created"
        android:textColor="@color/black"
        android:textSize="@dimen/sp15"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/txt_item_episode" />

    <TextView
        android:id="@+id/txt_item_air_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp15"
        android:text="@string/air_date"
        android:textColor="@color/black"
        android:textSize="@dimen/sp15"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/txt_item_created" />


</androidx.constraintlayout.widget.ConstraintLayout>