<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.fragments.character.detail.CharacterDetailFragment">


    <ImageView
        android:id="@+id/image_item_character_detail"
        android:layout_width="@dimen/dp100"
        android:layout_height="@dimen/dp100"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginTop="@dimen/dp10"
        android:contentDescription="@string/todo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txt_item_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp30"
        android:text="@string/name"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/sp20"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_item_character_detail" />

    <TextView
        android:id="@+id/txt_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp35"
        android:layout_marginTop="@dimen/dp143"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/sp15"
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@id/txt_item_name2"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txt_item_status2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp20"
        android:text="@string/status"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/sp20"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_item_name" />

    <TextView
        android:id="@+id/txt_item_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp30"
        android:layout_marginTop="@dimen/dp187"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="@dimen/sp15"
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@id/txt_item_status2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_item_type2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:text="@string/type"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/sp20"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_item_status" />

    <TextView
        android:id="@+id/txt_item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp48"
        android:layout_marginTop="@dimen/dp232"
        android:text="@string/type"
        android:textColor="@color/black"
        android:textSize="@dimen/sp15"
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@id/txt_item_type2"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>